added about page

--- a/src/i18n/locales/cn/translation.json
+++ b/src/i18n/locales/cn/translation.json
@@ -1,5 +1,8 @@
 {
   "translation": {
+    "LIMA": "秘鲁利马",
+    "SHANGAI": "中国上海",
+    "BEIJING": "",
     "MAIN_MENU": {
       "BIOGRAPHY": "简历",
       "GALLERY": "画廊",
@@ -15,9 +18,7 @@
       "INTRO": "严坚平，旅秘画家，出生于中国上海，1985年移居秘鲁。四岁伊始，自幼自学绘画；后师从中国画坛巨匠刘海粟先生。受西方绘画风格，尤其是印象派的影响，严坚平近十年潜心在户外写生，不受学术技法的限制，使他能够在画布和纸上使用多种材料进行绘画。 .在 1980 年代后期，他涉足龟甲和甲壳上的铭文、甲骨文、象形文字，并将独特的字母符号应用于绘画。由于他长期在户外练习素描，他拥有对色彩积累的敏感度。严坚平在他的画作中，将东方的抽象意境与西方的多彩相结合，将两种截然不同的风格巧妙结合，营造出一个水墨画空间，带你进入一个微妙变化的无形世界。情感和诗意的抽象绘画",
       "HONORABLE_MENTIONS": "荣誉奖",
       "INDIVIDUAL_PRESENTATIONS": "集体画展",
-      "COLECTIVE_PRESENTATIONS": "集体画展",
-      "LIMA": "秘鲁利马",
-      "SHANGAI": "中国上海"
+      "COLECTIVE_PRESENTATIONS": "集体画展"
     }
   }
 }
