--- a/src/i18n/locales/cn/translation.json
+++ b/src/i18n/locales/cn/translation.json
@@ -19,6 +19,14 @@
       "HONORABLE_MENTIONS": "荣誉奖",
       "INDIVIDUAL_PRESENTATIONS": "集体画展",
       "COLECTIVE_PRESENTATIONS": "集体画展"
+    },
+    "BODY": {
+      "DESCRIPTION1": "1987 年利马-秘鲁 北美秘鲁文化学院画廊绘 画和油画个人展",
+      "IMAGE_DESCRIPTION1": "面试",
+      "DESCRIPTION2": "在 1980 年代后期，他涉足龟甲和甲壳上的铭文、甲骨文、象形文字，并将独特的字母符号应用于绘画。由于他长期在户外练习素描，他 拥有对色彩积累的敏感度。严坚平在他的画作中，将东方的抽象意境 与西方的多彩相结合，将两种截然不同的风格巧妙结合，营造出一个 水墨画空间，带你进入一个微妙变化的无形世界。情感和诗意的抽象 绘画。",
+      "IMAGE_DESCRIPTION2": "人类文明史个展",
+      "DESCRIPTION3": "中国驻秘鲁大使黄敏慧女士与中美石油开发公司总经理宫本 才先生与雨龙畅谈艺术创作",
+      "IMAGE_DESCRIPTION3": "2012年利马-秘鲁油画个展——主题“光影之诗”"
     }
   }
 }
