--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -19,6 +19,14 @@
       "HONORABLE_MENTIONS": "Honorable mentions",
       "INDIVIDUAL_PRESENTATIONS": "Individual presentations",
       "COLECTIVE_PRESENTATIONS": "Colective presentations"
+    },
+    "BODY": {
+      "DESCRIPTION1": "1987 Lima-Peru Individual Exhibition of Drawings and Oils, North American Peruvian Cultural Institute Gallery",
+      "IMAGE_DESCRIPTION1": "Interview",
+      "DESCRIPTION2": "In the late 1980s, he dabbled in inscriptions on the bones and shells of tortoises, pictograms, and applying unique letter symbols to paintings. In his paintings, Jianping applies the eastern abstract conception, together with the western colorful, achieving an ingenious combination of the two totally different styles, creating a painting space of water and ink, which takes you into an invisible world with delicate changes, thus showing the emotional and poetic abstract painting.",
+      "IMAGE_DESCRIPTION2": "The History of Human Civilization, Solo Exhibition",
+      "DESCRIPTION3": "Ms. Huang Minhui, the former Chinese ambassador to Peru, and Mr. Gongbencai, the former general manager of Sino-American Petroleum Development Corporation, talked with Jianping about artistic creation",
+      "IMAGE_DESCRIPTION3": "2012 Lima-Peru Solo Exhibition Oil Paintings – the theme “The poetry of light and shadow”"
     }
   }
 }
