--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -19,6 +19,14 @@
       "HONORABLE_MENTIONS": "Menciones honrosas",
       "INDIVIDUAL_PRESENTATIONS": "Exposiciones individuales",
       "COLECTIVE_PRESENTATIONS": "Exposiciones colectivas"
+    },
+    "BODY": {
+      "DESCRIPTION1": "1987 Lima-Perú Exposición Individual de Dibujos y Oleos, Galería Instituto Cultural Peruano Norteamericano",
+      "IMAGE_DESCRIPTION1": "Entrevista",
+      "DESCRIPTION2": "Al final de los 80’s, se aficionó en las inscripciones en los huesos y caparazones de tortugas, pictogramas, y aplicando los únicos símbolos de letras en las pinturas. En sus pinturas, Jianping aplica la concepción abstracta oriental, junto con el colorido occidental, logrando una ingeniosa combinación de los dos estilos totalmente distintos, creando un espacio de pintura del agua y la tinta, que te lleva en un mundo invisible con cambios delicados, mostrando así la pintura abstracta emocionada y poética.",
+      "IMAGE_DESCRIPTION2": "La Historia de la Civilización Humana, Exposición Individual",
+      "DESCRIPTION3": "La Sra. Huang Minhui, exembajadora de China en Perú, y el Sr. Gongbencai, exgerente general de Corporación Sino-Americana de Desarrollo del Petróleo, conversaron con Jianping sobre creación artística.",
+      "IMAGE_DESCRIPTION3": "2012 Lima-Perú Exposición Individual Oleos – el tema “La poesía de luz y sombra”"
     }
   }
 }
