--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -8,7 +8,8 @@
       "GALLERY": "Gallery",
       "NEWS": "News",
       "EXHIBITIONS": "Exhibitions",
-      "CONTACT_US": "Contact us"
+      "CONTACT_US": "Contact us",
+      "ABOUT": "About"
     },
     "HERO": {
       "TITLE": "Lorem ipsum dolor",
