--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -8,7 +8,8 @@
       "GALLERY": "Galeria",
       "NEWS": "Noticias",
       "EXHIBITIONS": "Exhibiciones",
-      "CONTACT_US": "Contacto"
+      "CONTACT_US": "Contacto",
+      "ABOUT": "Sobre el autor"
     },
     "HERO": {
       "TITLE": "Lorem ipsum dolor",
