--- a/src/i18n/locales/zh/translation.json
+++ b/src/i18n/locales/zh/translation.json
@@ -8,7 +8,8 @@
       "GALLERY": "画廊",
       "NEWS": "新闻",
       "EXHIBITIONS": "展览",
-      "CONTACT_US": "联系"
+      "CONTACT_US": "联系",
+      "ABOUT": "关于"
     },
     "HERO": {
       "TITLE": "Lorem ipsum dolor",
