--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -28,6 +28,21 @@
       "IMAGE_DESCRIPTION2": "The History of Human Civilization, Solo Exhibition",
       "DESCRIPTION3": "Ms. Huang Minhui, the former Chinese ambassador to Peru, and Mr. Gongbencai, the former general manager of Sino-American Petroleum Development Corporation, talked with Jianping about artistic creation",
       "IMAGE_DESCRIPTION3": "2012 Lima-Peru Solo Exhibition Oil Paintings – the theme “The poetry of light and shadow”"
+    },
+    "SLIDES": {
+      "TITLE": "Life and career",
+      "SLIDE1_TITLE": "A unique start",
+      "SLIDE1_SUBTITLE": "First steps",
+      "SLIDE1_DESCRIPTION": "Yan JianPing was born in Shanghai, China, and his childhood love of painting was influenced by the Western impressionist movement. Until middle school, his impressionist style was self-taught. Most of the time keen on painting outdoor scenes, such as streets, parks, and the Shanghai Bund, he also often returned to Luoyang, Xi`an, Hangzhou, Suzhou, Qingdao, Chongqing, Chengdu and other places, painting nearly a thousand works.",
+      "SLIDE2_TITLE": "Life of learning",
+      "SLIDE2_SUBTITLE": "Education",
+      "SLIDE2_DESCRIPTION": "In the 1970`s, he became a disciple of Mr. Liu Haisu, a Chinese painting master and was under his guidance for eight years. In 1978, he began working with oil painting and sculpture at a Shanghai studio. After the Cultural Revolution, and with the help of five others, he helped organize the first exhibition in China without government support. His master Mr. Liu Haisu personally wrote an inscription for the exhibition and cut the ribbon. In the late 70`s, he participated in the Shanghai Art Museum`s spring and autumn exhibitions.",
+      "SLIDE3_TITLE": "South America",
+      "SLIDE3_SUBTITLE": "Life in Peru",
+      "SLIDE3_DESCRIPTION": "In July of 1985, he immigrated to Peru. Thanks to his experience with outdoor painting and creativity, he gained a keen eye for color and began to explore how to combine Eastern and Western cultures in his works. Using traditional Chinese ink wash and traditional Western oil painting techniques, he creates unique combinations of light and subtlety that show a unique natural landscape on the canvas.",
+      "SLIDE4_TITLE": "Awards",
+      "SLIDE4_SUBTITLE": "Recognition",
+      "SLIDE4_DESCRIPTION": "In September of that year, he received an honorary award (MENCION HONROSA) at a Peru Cultural Center watercolour competition. He has gone on to receive honorary awards in Italy and Argentina. From 1987 to 2013, he has held several solo exhibitions. He has also participated in larger exhibitions in the Pedro de Osma Museum in Lima."
     }
   }
 }
