--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -28,6 +28,21 @@
       "IMAGE_DESCRIPTION2": "La Historia de la Civilización Humana, Exposición Individual",
       "DESCRIPTION3": "La Sra. Huang Minhui, exembajadora de China en Perú, y el Sr. Gongbencai, exgerente general de Corporación Sino-Americana de Desarrollo del Petróleo, conversaron con Jianping sobre creación artística.",
       "IMAGE_DESCRIPTION3": "2012 Lima-Perú Exposición Individual Oleos – el tema “La poesía de luz y sombra”"
+    },
+    "SLIDES": {
+      "TITLE": "Vida y carrera",
+      "SLIDE1_TITLE": "Un comienzo único",
+      "SLIDE1_SUBTITLE": "Primeros pasos",
+      "SLIDE1_DESCRIPTION": "Yan Jianping nació en Shanghái, China. Le encantaba pintar desde que era un niño. Aprendió a dibujar y pintar al óleo por sí mismo en la escuela secundaria. Fue profundamente influenciado por el impresionismo. En Qingdao, Xi&#39;an, Luoyang, Chongqing, Chengdu y otros lugares, ha esbozado cerca de 1.000 obras.",
+      "SLIDE2_TITLE": "Una vida de aprendizaje",
+      "SLIDE2_SUBTITLE": "Educacion",
+      "SLIDE2_DESCRIPTION": "En la década de 1970, bajo la dirección del pintor Liu Haisu, ingresó al Estudio de pintura al óleo y escultura de Shanghái para continuar sus estudios en 1978. Después de la Revolución Cultural, organizó la primera exposición de arte no oficial para seis personas. El maestro Liu Haisu escribió una inscripción y corta la cinta para la exposición! A fines de la década de 1970, participó muchas veces en la Exposición de primavera y Otoño del Museo de Arte de Shanghái.",
+      "SLIDE3_TITLE": "Sudamérica",
+      "SLIDE3_SUBTITLE": "Vida en Perú",
+      "SLIDE3_DESCRIPTION": "En julio de 1985, emigró a Perú, América del Sur. Gracias a sus bocetos al aire libre y su creación libre a largo plazo, Yan Jianping acumuló un agudo sentido del color y comenzó a experimentar la exploración y creación de dos culturas pictóricas diferentes en Oriente y Oriente. Oeste Usando las características de la tinta y el aceite y el color de la pintura al óleo, gradualmente se dio cuenta de que la ingeniosa combinación de dos estilos completamente diferentes, la sutil interpenetración de líneas y luces combinadas, presenta una expresión única del reflejo mutuo de escenas naturales y emociones humanas en el lienzo",
+      "SLIDE4_TITLE": "Premios",
+      "SLIDE4_SUBTITLE": "Reconocimiento",
+      "SLIDE4_DESCRIPTION": "Recibió la MENCIÓN HONROSA en el concurso de pintura a la acuarela, luego recibió el certificado honorífico de pintura a la acuarela del Museo de Arte Italiano en Perú, recibió la mención de honor en el concurso de dibujo peruano organizado por la Embajada Argentina, y luego ganó el Comité de Mujeres del Congreso Peruano - Organización Nacional de Salud organizó fondos de emergencia El certificado de honor otorgado por la donación, realizó varias exposiciones individuales de 1987 a 2013, y participó en muchas exposiciones de gran escala realizadas por el Museo Pedro de Osma en Lima."
     }
   }
 }
