--- a/src/i18n/locales/zh/translation.json
+++ b/src/i18n/locales/zh/translation.json
@@ -28,6 +28,21 @@
       "IMAGE_DESCRIPTION2": "人类文明史个展",
       "DESCRIPTION3": "中国驻秘鲁大使黄敏慧女士与中美石油开发公司总经理宫本 才先生与雨龙畅谈艺术创作",
       "IMAGE_DESCRIPTION3": "2012年利马-秘鲁油画个展——主题“光影之诗”"
+    },
+    "SLIDES": {
+      "TITLE": "生活和事业",
+      "SLIDE1_TITLE": "独特的开始",
+      "SLIDE1_SUBTITLE": "第一步",
+      "SLIDE1_DESCRIPTION": "严坚平出生于中国上海，自幼小酷爱绘画，中学时代自学素描，油画，受印象派影 响极深，大部分时间热衷于户外写生，几乎走遍上海的公园  大街小巷和外滩，时 常来回于杭州 苏州 青岛 西安 洛阳 重庆 成都等地，写生了近千幅作品",
+      "SLIDE2_TITLE": "学习生活",
+      "SLIDE2_SUBTITLE": "教育",
+      "SLIDE2_DESCRIPTION": "七十年代 曾受刘海粟画师的指导，七八年进入上海油画雕塑室进修，文革结束后组织第一个 非官方六人画展，刘海粟大师为画展亲笔题词和剪彩！ 七十年代末多次参加上海美 术馆春.秋季画展。",
+      "SLIDE3_TITLE": "南美洲",
+      "SLIDE3_SUBTITLE": "秘鲁的生活",
+      "SLIDE3_DESCRIPTION": "85年七月移民南美秘鲁，得益于长期户外写生和自由创作，严坚 平积累了对色彩的敏锐性，开始体验东西方两种不同绘画文化的探索和创作，运用 水墨特性和油画色彩，逐渐实现了两种完全不同的风格巧妙结合，组合线条与光线 微妙的相互渗透，在画布上呈现出一种对自然景象和人类情感相互映照的独特表达",
+      "SLIDE4_TITLE": "奖项",
+      "SLIDE4_SUBTITLE": "认出",
+      "SLIDE4_DESCRIPTION": "当年九月参加美秘文化中心举办的秘鲁全国水彩画比赛获荣誉奖(MENCION HONROSA)，之后又获得秘鲁意大利艺术博物馆颁发的水彩画荣誉证书；获得阿根 廷大使馆举办的秘鲁素描大赛荣誉奖； 后再获得秘鲁国会妇女委员会- 国家卫生组 织举办的紧急资金捐赠颁发的荣誉奖状，从1987年到2013年共举办多次个人画展， 多次参加利马Pedro de Osma博物馆举办的大型画展."
     }
   }
 }
