--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -49,6 +49,9 @@
     "GALLERY": {
       "TITLE": "Galería y proyectos",
       "MORE": "Ver mas"
+    },
+    "CONTACT_US": {
+      "TITLE": "Contacto"
     }
   }
 }
